--- a/xkcdgenerator/wasmcloud.toml
+++ b/xkcdgenerator/wasmcloud.toml
@@ -1,7 +1,10 @@
-name = "xkcdgenerator"
+name = "XKCD Generator"
 language = "rust"
 type = "actor"
-version = "0.1.0"
 
 [actor]
-claims = ["wasmcloud:httpserver", "wasmcloud:httpclient", "wasmcloud:builtin:numbergen"]
+claims = [
+    "wasmcloud:httpserver",
+    "wasmcloud:httpclient",
+    "wasmcloud:builtin:numbergen",
+]
