--- a/.github/workflows/release-hello-world.yml
+++ b/.github/workflows/release-hello-world.yml
@@ -75,8 +75,8 @@ jobs:
         uses: wasmcloud/common-actions/oci-artifact-release@main
         with:
           artifact-path: ${{ env.working-directory }}/hello/build/${{ env.actor-name }}_s.wasm
-          oci-url: ${{ secrets.AZURECR_PUSH_URL }}   
+          oci-url: ${{ secrets.GHCR_PUSH_URL }}
           oci-repository: ${{ env.actor-name }}
           oci-version: ${{ env.actor-version }}
-          oci-username: ${{ secrets.COSMONIC_AZURECR_PUSH_USER }}
-          oci-password: ${{ secrets.COSMONIC_AZURECR_PUSH_PASSWORD }}
+          oci-username: ${{ github.actor }}
+          oci-password: ${{ secrets.GITHUB_TOKEN }}
