--- a/.github/workflows/release-xkcdgnerator.yml
+++ b/.github/workflows/release-xkcdgnerator.yml
@@ -26,7 +26,7 @@ jobs:
       # - name: Test actor
       #   run: cargo test --target x86_64-unknown-linux-gnu -- --nocapture
       - name: Build and sign wasmCloud actor
-        env: 
+        env:
           WASH_ISSUER_KEY: ${{ env.WASH_ISSUER_KEY }}
           WASH_SUBJECT_KEY: ${{ env.WASH_SUBJECT_KEY }}
         run: wash build
@@ -67,8 +67,8 @@ jobs:
         uses: wasmcloud/common-actions/oci-artifact-release@main
         with:
           artifact-path: ${{ env.working-directory }}/build/${{ env.actor-name }}_s.wasm
-          oci-url: ${{ secrets.AZURECR_PUSH_URL }}   
+          oci-url: ${{ secrets.GHCR_PUSH_URL }}
           oci-repository: ${{ env.actor-name }}
           oci-version: ${{ env.actor-version }}
-          oci-username: ${{ secrets.COSMONIC_AZURECR_PUSH_USER }}
-          oci-password: ${{ secrets.COSMONIC_AZURECR_PUSH_PASSWORD }}
+          oci-username: ${{ github.actor }}
+          oci-password: ${{ secrets.GITHUB_TOKEN }}
