--- a/.github/workflows/release-hello-world.yml
+++ b/.github/workflows/release-hello-world.yml
@@ -1,4 +1,4 @@
-name: Release Hello World to AzureCR
+name: Release Hello World to GHCR
 on:
   workflow_dispatch:
   push:
@@ -71,7 +71,7 @@ jobs:
         run: |
           echo "actor-version=latest" >> $GITHUB_ENV
         working-directory: ${{ env.working-directory }}/hello
-      - name: Push actor to AzureCR
+      - name: Push actor to GHCR
         uses: wasmcloud/common-actions/oci-artifact-release@main
         with:
           artifact-path: ${{ env.working-directory }}/hello/build/${{ env.actor-name }}_s.wasm
