--- a/.github/workflows/release-multichannelchat.yml
+++ b/.github/workflows/release-multichannelchat.yml
@@ -1,4 +1,4 @@
-name: Release Multi Channel Chat to AzureCR
+name: Release Multi Channel Chat to GHCR
 on:
   workflow_dispatch:
   push:
@@ -91,7 +91,7 @@ jobs:
         run: |
           echo "actor-version=$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[].version')" >> $GITHUB_ENV
         working-directory: ${{ matrix.working-directory }}
-      - name: Push actor to AzureCR
+      - name: Push actor to GHCR
         uses: wasmcloud/common-actions/oci-artifact-release@main
         with:
           artifact-path: ${{ matrix.working-directory }}/build/${{ env.actor-name }}_s.wasm
