--- a/.github/workflows/release-xkcdgnerator.yml
+++ b/.github/workflows/release-xkcdgnerator.yml
@@ -1,4 +1,4 @@
-name: Release XKCDGenerator to AzureCR
+name: Release XKCDGenerator to GHCR
 on:
   workflow_dispatch:
   push:
@@ -63,7 +63,7 @@ jobs:
         run: |
           echo "actor-version=latest" >> $GITHUB_ENV
         working-directory: ${{ env.working-directory }}
-      - name: Push actor to AzureCR
+      - name: Push actor to GHCR
         uses: wasmcloud/common-actions/oci-artifact-release@main
         with:
           artifact-path: ${{ env.working-directory }}/build/${{ env.actor-name }}_s.wasm
