--- a/kvcounter/kvcounter.wadm.yaml
+++ b/kvcounter/kvcounter.wadm.yaml
@@ -13,7 +13,7 @@ spec:
     - name: kvcounter
       type: actor
       properties:
-        image: cosmonic.azurecr.io/kvcounter:0.1.0
+        image: ghcr.io/cosmonic/kvcounter:0.1.0
       traits:
         - type: spreadscaler
           properties:
@@ -29,7 +29,7 @@ spec:
     - name: httpserver
       type: capability
       properties:
-        image: cosmonic.azurecr.io/httpserver_wormhole:0.5.4
+        image: cosmonic.azurecr.io/httpserver_wormhole:0.6.2
         contract: wasmcloud:httpserver
       traits:
         - type: spreadscaler
@@ -38,11 +38,11 @@ spec:
             spread:
               - name: wormholespread
                 requirements:
-                  cosmonic_managed: 'true'
+                  cosmonic_managed: "true"
     - name: keyvalue
       type: capability
       properties:
-        image: cosmonic.azurecr.io/builtin_keyvalue:0.2.4
+        image: cosmonic.azurecr.io/builtin_keyvalue:0.2.5
         contract: wasmcloud:keyvalue
       traits:
         - type: spreadscaler
@@ -51,4 +51,4 @@ spec:
             spread:
               - name: kvspread
                 requirements:
-                  cosmonic_managed: 'true'
+                  cosmonic_managed: "true"
