fix(xkcd): don't process UI assets
Signed-off-by: Brooks Townsend <brooksmtownsend@gmail.com>

--- a/xkcdgenerator/project-generate.toml
+++ b/xkcdgenerator/project-generate.toml
@@ -2,7 +2,9 @@
 
 raw = [
   ".github/workflows/build.yml",
-  ".github/workflows/release.yml"
+  ".github/workflows/release.yml",
+  "build/*",
+  "ui/*",
 ]
 exclude = [
   "/.idea"
